security: fix critical/high vulnerabilities from SAST audit
Fixes:
- .gitignore: add *.db, data/, *.log, *.key, *.pem, scanner.lock/pid
- S-01/02: sanitize exception handlers to prevent private key leakage
  (order_executor.py, redemption.py — no longer print {e} in key paths)
- S-03: remove unused subprocess import from llm_analyzer.py
- S-05: enforce integer type in db.mark_notifications_consumed()
- S-07: strengthen private key validation (0x + 64 hex chars via regex)
- S-08: remove hardcoded third-party RPC fallback (meowrpc.com)
- S-12: replace MD5 with SHA-256 for dedup IDs (news_ingestion, sports_data)
- S-14: fetch dynamic gas price instead of hardcoded 100 gwei

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,31 @@ build/
 venv/
 .env
 config.yaml
+
+# Runtime data and databases
+data/
+*.db
+*.sqlite
+*.sqlite3
+
+# Log files
+*.log
+logs/
+
+# Key and credential files
+*.key
+*.pem
+*.p12
+*.pfx
+
+# Scanner runtime files
+scanner.lock
+scanner.pid
+scanner_heartbeat
+
+# LLM runtime files
+llm_request.json
+llm_response.json
+
+# OS artifacts
+.DS_Store
